relatorios/202120278/T5/compilador.txt
arvore.cpp:27:15: error: ‘list’ has not been declared
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp:27:19: error: expected ‘,’ or ‘...’ before ‘<’ token
   27 |   void inicia(list<T>&entrada)
      |                   ^
arvore.cpp:59:17: error: ‘list’ has not been declared
   59 |   bool posOrdem(list<T>& saida)
      |                 ^~~~
arvore.cpp:59:21: error: expected ‘,’ or ‘...’ before ‘<’ token
   59 |   bool posOrdem(list<T>& saida)
      |                     ^
arvore.cpp: In member function ‘void Arvore<T>::inicia(int)’:
arvore.cpp:29:14: error: ‘entrada’ was not declared in this scope
   29 |     auto it2=entrada.begin();
      |              ^~~~~~~
arvore.cpp: In member function ‘bool Arvore<T>::posOrdem(int)’:
arvore.cpp:62:26: error: ‘saida’ was not declared in this scope
   62 |             esq->emOrdem(saida);
      |                          ^~~~~
arvore.cpp:65:26: error: ‘saida’ was not declared in this scope
   65 |             dir->emOrdem(saida);
      |                          ^~~~~
arvore.cpp:67:9: error: ‘saida’ was not declared in this scope
   67 |         saida.push_back(dado);
      |         ^~~~~
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_0()’:
arvore.cpp:97:14: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
   97 |     a.inicia(entrada);
      |              ^~~~~~~
      |              |
      |              std::__cxx11::list<int>
arvore.cpp:27:15: note:   initializing argument 1 of ‘void Arvore<T>::inicia(int) [with T = int]’
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_2()’:
arvore.cpp:105:14: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
  105 |     a.inicia(entrada);
      |              ^~~~~~~
      |              |
      |              std::__cxx11::list<int>
arvore.cpp:27:15: note:   initializing argument 1 of ‘void Arvore<T>::inicia(int) [with T = int]’
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_4()’:
arvore.cpp:115:14: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
  115 |     a.inicia(entrada);
      |              ^~~~~~~
      |              |
      |              std::__cxx11::list<int>
arvore.cpp:27:15: note:   initializing argument 1 of ‘void Arvore<T>::inicia(int) [with T = int]’
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp:116:16: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
  116 |     a.posOrdem(saida);
      |                ^~~~~
      |                |
      |                std::__cxx11::list<int>
arvore.cpp:59:17: note:   initializing argument 1 of ‘bool Arvore<T>::posOrdem(int) [with T = int]’
   59 |   bool posOrdem(list<T>& saida)
      |                 ^~~~
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_6()’:
arvore.cpp:126:14: error: cannot convert ‘std::__cxx11::list<char>’ to ‘int’
  126 |     a.inicia(entrada);
      |              ^~~~~~~
      |              |
      |              std::__cxx11::list<char>
arvore.cpp:27:15: note:   initializing argument 1 of ‘void Arvore<T>::inicia(int) [with T = char]’
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp:127:16: error: cannot convert ‘std::__cxx11::list<char>’ to ‘int’
  127 |     a.posOrdem(saida);
      |                ^~~~~
      |                |
      |                std::__cxx11::list<char>
arvore.cpp:59:17: note:   initializing argument 1 of ‘bool Arvore<T>::posOrdem(int) [with T = char]’
   59 |   bool posOrdem(list<T>& saida)
      |                 ^~~~
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_8()’:
arvore.cpp:137:14: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
  137 |     a.inicia(entrada);
      |              ^~~~~~~
      |              |
      |              std::__cxx11::list<int>
arvore.cpp:27:15: note:   initializing argument 1 of ‘void Arvore<T>::inicia(int) [with T = int]’
   27 |   void inicia(list<T>&entrada)
      |               ^~~~
arvore.cpp:138:16: error: cannot convert ‘std::__cxx11::list<int>’ to ‘int’
  138 |     a.posOrdem(saida);
      |                ^~~~~
      |                |
      |                std::__cxx11::list<int>
arvore.cpp:59:17: note:   initializing argument 1 of ‘bool Arvore<T>::posOrdem(int) [with T = int]’
   59 |   bool posOrdem(list<T>& saida)
      |                 ^~~~
arvore.cpp: In instantiation of ‘bool Arvore<T>::vazio() [with T = int]’:
arvore.cpp:98:5:   required from here
arvore.cpp:73:16: warning: NULL used in arithmetic [-Wpointer-arith]
   73 |        if(dado == NULL)
      |                ^
arvore.cpp: In member function ‘bool Arvore<T>::vazio() [with T = int]’:
arvore.cpp:75:3: warning: control reaches end of non-void function [-Wreturn-type]
   75 |   }
      |   ^
